kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nornos
  labels:
    name: nornos
    environment: base
